Update content, fix alignment and spacing

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ font-weight: bold;
 
 .header ul {
 margin-left: auto;
-gap: 10px;
+gap: 16px;
 }
 
 .signup {
@@ -68,6 +68,7 @@ display: flex;
 flex-direction: column;
 gap: 10px ;
 margin-right: 30px;
+width: 600px;
 }
 .right img {
 max-width: 100%;
@@ -89,6 +90,12 @@ padding: 60px;
 gap: 50px;
 padding-bottom: 100px;
 }
+
+.item {
+text-align: center;
+width: 225px;
+}
+
 
 .boxes .secondary {
 color: #1f2937;
@@ -114,9 +121,6 @@ font-weight: 900;
 color: #1F2937;
 }
 
-.item  {
-width: 200px;
-}
 
 img {
 max-width: 100%;
@@ -126,6 +130,7 @@ border-radius: 25px;
 .item img {
 border: 5px solid #3882F6;
 }
+
 
 .boxes {
 display: flex;
@@ -176,10 +181,12 @@ font-size: 22px;
 font-weight: bold;
 }
 
+
 .callbox button {
 margin-left: auto;
 border: 2px solid white;
 color: white;
+font-weight: bold;
 }
 
 .footer {
